@@ -1,4 +1,4 @@
-GNUSTEP_INSTALLATION_DIR = $(GNUSTEP_LOCAL_ROOT)
+GNUSTEP_INSTALLATION_DIR = $(GNUSTEP_USER_ROOT)
 
 include $(GNUSTEP_MAKEFILES)/common.make
 
